--- a/PptTranslator/env.example
+++ b/PptTranslator/env.example
@@ -1,7 +1,3 @@
 OPENAI_API_KEY=your_api_key #自身のAPI KEYを張り付け
-# OPENAI_MODEL=qwen3-30b-a3b # 日本語対応していない？？
-OPENAI_MODEL=mistral-7b-instruct
-# OPENAI_MODEL=gpt-4
-# OPENAI_MODEL=gpt-3.5-turbo
-# OPENAI_MODEL=gpt-4-32k
-OPENAI_SSL_VERIFY=false
+OPENAI_MODEL=model_name #使用したモデル名を指定
+OPENAI_SSL_VERIFY=false #Localでの使用を前提としているため、SSLは非対応
